Logistic Reg. Final

--- a/1. Supervised Learning/1.3. Logistic Regression/logistic_regression.ipynb
+++ b/1. Supervised Learning/1.3. Logistic Regression/logistic_regression.ipynb
@@ -933,6 +933,30 @@
    "source": [
     "Despite getting a worse MSE, the multiple node model still does very well. Still, is it slightly worse than the single input node.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Logistic regression successfully adapts linear regression for classification. and proved to be an incredibly useful model. Here are some main takeways:\n",
+    "\n",
+    "1. Versatility: Logistic regression is a versatile and widely used statistical method for binary classification tasks. It works well even for the non-linear data perceptron cannot handle. \n",
+    "\n",
+    "2. Probabilistic Predictions: Logistic regression outputs probabilities that an instance belongs to a particular class, rather than discrete predictions. This probabilistic nature allows for nuanced decision-making and provides uncertainty estimates for model predictions.\n",
+    "\n",
+    "3. Predictor Selection: Logstic regression works for both a single and multiple inputs. Incorporating multiple inputs is a powerful tool, but only will do better when the predictors actually reflect the true spread of the data. \n",
+    "\n",
+    "Overall, logistic regression is a powerful and interpretable method for binary classification, and I am excited to see how it compares to other classification methods.\n",
+    "***"
+   ]
   }
  ],
  "metadata": {
