--- a/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
+++ b/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
@@ -734,7 +734,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "***\n",
+    "In this notebook, we implemented and applied the perceptron algorithm for binary classification tasks. We used a dataset of soccer player statistics to predict whether a player is an attacker or a defender based on their goals and clearances.\n",
+    "\n",
+    "Here are some takeaways for the perceptron algorithm:\n",
+    "\n",
+    "- Simplicity and Efficiency: The perceptron algorithm is a simple and efficient algorithm for binary classification tasks. It iteratively updates the model parameters based on misclassified instances until convergence, making it computationally efficient for large datasets.\n",
+    "\n",
+    "- Linear Separability: The perceptron algorithm works well when the classes are linearly separable. It can converge to a solution that perfectly separates the classes if such a hyperplane exists. However, if the classes are not linearly separable, the algorithm may not converge, or it may converge to a suboptimal solution.\n",
+    "\n",
+    "The perceptron algorithm did great! I am excited to see if future algorithms can do better and I'm interested to see how we tackle non-linear classification problems.\n",
+    "***"
+   ]
   }
  ],
  "metadata": {
